--- a/0.check-target2-compounds.ipynb
+++ b/0.check-target2-compounds.ipynb
@@ -631,12 +631,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write to file"
+    "Remove DMSO wells"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.query(\"Metadata_JCP2022!='JCP2022_033924'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write to file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
