--- a/0.check-target2-compounds.ipynb
+++ b/0.check-target2-compounds.ipynb
@@ -640,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.query(\"Metadata_JCP2022!='JCP2022_033924'\")"
+    "df = df.query(\"Metadata_JCP2022!='JCP2022_033924'\").sort_values(by=\"Metadata_Well\")"
    ]
   },
   {
