--- a/0.check-target2-compounds.ipynb
+++ b/0.check-target2-compounds.ipynb
@@ -631,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove DMSO wells"
+    "Remove DMSO wells, sort and drop duplicates (based on `broad_sample` names)"
    ]
   },
   {
@@ -640,7 +640,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.query(\"Metadata_JCP2022!='JCP2022_033924'\").sort_values(by=\"Metadata_Well\")"
+    "df = (\n",
+    "    df.query(\"Metadata_JCP2022!='JCP2022_033924'\")\n",
+    "    .sort_values(by=\"Metadata_Well\")\n",
+    "    .drop_duplicates(subset=\"Metadata_broad_sample\")\n",
+    ")"
    ]
   },
   {
