Remove unwanted columns

--- a/0.check-target2-compounds.ipynb
+++ b/0.check-target2-compounds.ipynb
@@ -631,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove DMSO wells, sort and drop duplicates (based on `broad_sample` names)"
+    "Remove DMSO wells, sort, drop duplicates (based on `broad_sample` names) and remove unwanted columns"
    ]
   },
   {
@@ -644,6 +644,7 @@
     "    df.query(\"Metadata_JCP2022!='JCP2022_033924'\")\n",
     "    .sort_values(by=\"Metadata_Well\")\n",
     "    .drop_duplicates(subset=\"Metadata_broad_sample\")\n",
+    "    .drop(columns=[\"Metadata_Batch\", \"Metadata_Plate\", \"Metadata_PlateType\", \"Metadata_Source\"])\n",
     ")"
    ]
   },
