Repurposing hub overlap

--- a/0.map-target2-jump.ipynb
+++ b/0.map-target2-jump.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col_order = [\"Metadata_JCP2022\", \"Metadata_broad_sample\", \"Metadata_InChIKey\", \"Metadata_pert_iname\", \"Metadata_pubchem_cid\"]"
+    "col_order = [\"Metadata_JCP2022\", \"Metadata_broad_sample\", \"Metadata_InChIKey\", \"Metadata_pert_iname\", \"Metadata_pubchem_cid\"]\n",
+    "repurp_col_order = [\"Metadata_JCP2022\", \"Metadata_InChIKey\", \"Metadata_pert_iname\"]"
    ]
   },
   {
@@ -554,19 +555,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "all repurposing hub compounds mapping"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metadata_InChIKey</th>\n",
+       "      <th>Metadata_pert_iname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HJORMJIFDVBMOB-UHFFFAOYSA-N</td>\n",
+       "      <td>(R)-(-)-rolipram</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KPYSYYIEGFHWSV-UHFFFAOYSA-N</td>\n",
+       "      <td>(R)-baclofen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HJORMJIFDVBMOB-UHFFFAOYSA-N</td>\n",
+       "      <td>(S)-(+)-rolipram</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NHJLKJABMYANGP-UHFFFAOYSA-N</td>\n",
+       "      <td>1-azakenpaullone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LXBIFEVIBLOUGU-UHFFFAOYSA-N</td>\n",
+       "      <td>1-deoxymannojirimycin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Metadata_InChIKey    Metadata_pert_iname\n",
+       "0  HJORMJIFDVBMOB-UHFFFAOYSA-N       (R)-(-)-rolipram\n",
+       "1  KPYSYYIEGFHWSV-UHFFFAOYSA-N           (R)-baclofen\n",
+       "2  HJORMJIFDVBMOB-UHFFFAOYSA-N       (S)-(+)-rolipram\n",
+       "3  NHJLKJABMYANGP-UHFFFAOYSA-N       1-azakenpaullone\n",
+       "4  LXBIFEVIBLOUGU-UHFFFAOYSA-N  1-deoxymannojirimycin"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repurposing_hub_df = pd.read_csv(\n",
+    "    \"compound-annotator/data/compound_rephub_annot.csv.gz\",\n",
+    "    usecols=[\"Metadata_InChIKey\", \"Metadata_pert_iname\"],\n",
+    ")\n",
+    "repurposing_hub_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metadata_JCP2022</th>\n",
+       "      <th>Metadata_InChIKey</th>\n",
+       "      <th>Metadata_pert_iname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JCP2022_030621</td>\n",
+       "      <td>HJORMJIFDVBMOB-UHFFFAOYSA-N</td>\n",
+       "      <td>(R)-(-)-rolipram</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JCP2022_030621</td>\n",
+       "      <td>HJORMJIFDVBMOB-UHFFFAOYSA-N</td>\n",
+       "      <td>(S)-(+)-rolipram</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JCP2022_030621</td>\n",
+       "      <td>HJORMJIFDVBMOB-UHFFFAOYSA-N</td>\n",
+       "      <td>rolipram</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JCP2022_046239</td>\n",
+       "      <td>KPYSYYIEGFHWSV-UHFFFAOYSA-N</td>\n",
+       "      <td>(R)-baclofen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>JCP2022_046239</td>\n",
+       "      <td>KPYSYYIEGFHWSV-UHFFFAOYSA-N</td>\n",
+       "      <td>baclofen</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Metadata_JCP2022            Metadata_InChIKey Metadata_pert_iname\n",
+       "0   JCP2022_030621  HJORMJIFDVBMOB-UHFFFAOYSA-N    (R)-(-)-rolipram\n",
+       "1   JCP2022_030621  HJORMJIFDVBMOB-UHFFFAOYSA-N    (S)-(+)-rolipram\n",
+       "2   JCP2022_030621  HJORMJIFDVBMOB-UHFFFAOYSA-N            rolipram\n",
+       "3   JCP2022_046239  KPYSYYIEGFHWSV-UHFFFAOYSA-N        (R)-baclofen\n",
+       "4   JCP2022_046239  KPYSYYIEGFHWSV-UHFFFAOYSA-N            baclofen"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repurposing_hub_merged_df = repurposing_hub_df.merge(\n",
+    "    datasets_metadata_df, on=\"Metadata_InChIKey\", how=\"inner\"\n",
+    ")[repurp_col_order]\n",
+    "repurposing_hub_merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter(\"output/target-2-JUMP-mapping.xlsx\") as writer:\n",
+    "repurposing_hub_merged_df.to_csv('output/repurposing-hub-JUMP-mapped.tsv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.ExcelWriter(\"output/JUMP-repurposing_hub-mapping.xlsx\") as writer:\n",
     "    merged_df.to_excel(\n",
     "        writer, index=False, sheet_name=\"Target-2-JUMP\"\n",
     "    )\n",
     "\n",
-    "with pd.ExcelWriter(\"output/target-2-JUMP-mapping.xlsx\", mode=\"a\") as writer:\n",
+    "with pd.ExcelWriter(\"output/JUMP-repurposing_hub-mapping.xlsx\", mode=\"a\") as writer:\n",
     "    poscon_merged_df.to_excel(\n",
     "        writer, index=False, sheet_name=\"Target-2-JUMP-poscon\"\n",
+    "    )\n",
+    "\n",
+    "with pd.ExcelWriter(\"output/JUMP-repurposing_hub-mapping.xlsx\", mode=\"a\") as writer:\n",
+    "    repurposing_hub_merged_df.to_excel(\n",
+    "        writer, index=False, sheet_name=\"Repurposing-Hub-JUMP\"\n",
     "    )"
    ]
   }
